// Vitest Snapshot v1

exports[`Nav component is displaying 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-dark"
  >
    <div
      class="nav-left"
    >
      <button
        aria-label="Toggle menu"
        class="btn btn-plain sidebar-toggle"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="21"
            y1="12"
            y2="12"
          />
          <line
            x1="3"
            x2="21"
            y1="6"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="nav-center"
    >
      <span
        class="lock-room-container"
      >
        <button
          class="lock-room btn btn-link btn-plain"
          data-testid="lock-room-button"
          id="lock-room-button"
        >
          <svg
            class="muted"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 9.9-1"
            />
          </svg>
        </button>
      </span>
      <span
        class="room-label"
      >
        room
      </span>
      <button
        class="btn btn-plain btn-link clipboard-trigger room-id ellipsis"
        id="copy-room-url-button"
      >
        /testRoom
      </button>
      <button
        aria-label="Copy room link"
        class="btn btn-plain copy-btn"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="13"
            rx="2"
            ry="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
      </button>
    </div>
    <div
      class="nav-right"
    >
      <button
        class="btn btn-link btn-plain live-indicator"
        title="Users"
      >
        <span
          class="live-dot"
        />
        <span
          class="member-count"
          style="color: rgb(40, 167, 69);"
        >
          0 online
        </span>
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Nav component is displaying with another configuration and can rerender 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-dark"
  >
    <div
      class="nav-left"
    >
      <button
        aria-label="Toggle menu"
        class="btn btn-plain sidebar-toggle"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="21"
            y1="12"
            y2="12"
          />
          <line
            x1="3"
            x2="21"
            y1="6"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="nav-center"
    >
      <span
        class="lock-room-container"
      >
        <button
          class="lock-room btn btn-link btn-plain"
          data-testid="lock-room-button"
          id="lock-room-button"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
        </button>
      </span>
      <span
        class="room-label"
      >
        room
      </span>
      <button
        class="btn btn-plain btn-link clipboard-trigger room-id ellipsis"
        id="copy-room-url-button"
      >
        /testRoom_2
      </button>
      <button
        aria-label="Copy room link"
        class="btn btn-plain copy-btn"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="13"
            rx="2"
            ry="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
      </button>
    </div>
    <div
      class="nav-right"
    >
      <button
        class="btn btn-link btn-plain live-indicator"
        title="Users"
      >
        <span
          class="live-dot live-dot--locked"
        />
        <span
          class="member-count"
          style="color: rgb(220, 53, 69);"
        >
          2 online
        </span>
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Nav component is displaying with another configuration and can rerender 2`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-dark"
  >
    <div
      class="nav-left"
    >
      <button
        aria-label="Toggle menu"
        class="btn btn-plain sidebar-toggle"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="21"
            y1="12"
            y2="12"
          />
          <line
            x1="3"
            x2="21"
            y1="6"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="nav-center"
    >
      <span
        class="lock-room-container"
      >
        <button
          class="lock-room btn btn-link btn-plain"
          data-testid="lock-room-button"
          id="lock-room-button"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
        </button>
      </span>
      <span
        class="room-label"
      >
        room
      </span>
      <button
        class="btn btn-plain btn-link clipboard-trigger room-id ellipsis"
        id="copy-room-url-button"
      >
        /testRoom_3
      </button>
      <button
        aria-label="Copy room link"
        class="btn btn-plain copy-btn"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="13"
            rx="2"
            ry="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
      </button>
    </div>
    <div
      class="nav-right"
    >
      <button
        class="btn btn-link btn-plain live-indicator"
        title="Users"
      >
        <span
          class="live-dot live-dot--locked"
        />
        <span
          class="member-count"
          style="color: rgb(220, 53, 69);"
        >
          2 online
        </span>
      </button>
    </div>
  </nav>
</DocumentFragment>
`;
